# watermarking-systems

./: .gitignore  README.md  normalization.py  plots.ipynb  pyproject.toml  requirements.txt  test-audioseal.py  test-sc.py  test-wavmark.py  test_ber.py  test_silentcipher.py  test_systems.py  utils.py
audio-files/audioseal/results/: ber_results.csv  results.csv
audio-files/silentcipher/results/: ber_results.csv  new_console_output.txt  new_results.txt  results-no_attack.txt  results.csv  results.txt
audio-files/wavmark/results/: ber_results.csv  results-no_attack.txt  results.csv  results.txt
dnn-audio-watermarking-debugged/: attacks.py  evaluation.py  message-pool.txt  models.py  run.ipynb  train.py
plots/: plots_tesis.ipynb
resultados viejos/as/: old_results.txt  results.txt
resultados viejos/sc/: new_console_output.txt  results-payload.txt  results.txt
resultados viejos/wm/: results-payload.txt
thesis-project/: inference.py  preprocessing.py  training.py
thesis-project/data_management/: dataset.py
thesis-project/model/: invertible_network.py
wavmark/: main.py
wavmark/models/: discriminator.py  invblock.py  my_model.py  rrdb_denselayer.py
wavmark/src/wavmark/: main.py
wavmark/src/wavmark/models/: discriminator.py  my_model.py  rrdb_denselayer.py
wavmark/src/wavmark/utils/: custom_loss.py  get_dataloader.py
wavmark/utils/: custom_loss.py  dataset_slice.py  get_dataloader.py
