[tool.poetry]
name = "audio-wm-test"
version = "0.1.0"
description = "Destinado a testear diferentes modelos de generación y detección de marcas de agua."
authors = ["juan <juan.almaraz097@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.0"
torchaudio = "^2.4.0"
audioseal = "^0.1.4"
numpy = "^1.0"
torchvision = {version = "^0.19.0+cpu", source = "pytorch_cpu"}
soundfile = "^0.12.1"
wavmark = "^0.0.3"

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
